--- a/package.json
+++ b/package.json
@@ -20,12 +20,13 @@
     "@commitlint/config-conventional": "^17.0.0",
     "commitizen": "4.2.4",
     "cz-conventional-changelog": "3.3.0",
-    "history": "^5.3.0",
     "dotenv": "^16.0.1",
+    "history": "^5.3.0",
     "husky": "^8.0.1",
     "plop": "^3.1.0",
     "prettier": "^2.6.2",
-    "prop-types": "^15.7.2"
+    "prop-types": "^15.7.2",
+    "react-js-stickynav": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
